--- a/cakeManage/templates/edit.html
+++ b/cakeManage/templates/edit.html
@@ -7,7 +7,7 @@
     <title>Cake Store Edit</title>
 </head>
 <body>
-    <h1>내용 수정</h1>
+    <h1>내용 수정- 김동윤</h1>
     <form method="POST" class="post-form" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
