--- a/cakeManage/templates/home.html
+++ b/cakeManage/templates/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- 누르면 홈 화면으로 돌아가도록 설정함. -->
-    <a href="{% url 'home' %}"><h1>ALLCAKES🍰</h1></a>
+    <a href="{% url 'home' %}"><h1>ALLCAKES🍰♥️</h1></a>
     <p>✨인스타에 흩어져있던 주문 제작 케이크 가게들을 한눈에✨</p>
 
     <h3><a href="{% url 'new' %}">새 케이크집 등록</a></h3>
