--- a/cakeManage/templates/detail.html
+++ b/cakeManage/templates/detail.html
@@ -7,7 +7,7 @@
     <title>Cake Store Detail</title>
 </head>
 <body>
-    <h1>케이크집 상세</h1>
+    <h1>케이크집 상세입니다.</h1>
     
     <!-- 대표이미지, 가게이름, 위치, 연락처, 설명, 케잌이미지 -->
     <div class="store-detail">
